--- a/DuAn01_G3_ebooks/src/com/ebooks/main/TypeBooksDiaLog.form
+++ b/DuAn01_G3_ebooks/src/com/ebooks/main/TypeBooksDiaLog.form
@@ -101,25 +101,6 @@
             </Component>
           </SubComponents>
         </Container>
-        <Component class="javax.swing.JLabel" name="jLabel18">
-          <Properties>
-            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-              <Font name="Inter ExtraBold" size="26" style="0"/>
-            </Property>
-            <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-              <Color blue="4c" green="95" red="37" type="rgb"/>
-            </Property>
-            <Property name="text" type="java.lang.String" value="c&#x1ee7;a b&#x1ea1;n"/>
-          </Properties>
-          <AccessibilityProperties>
-            <Property name="AccessibleContext.accessibleName" type="java.lang.String" value="H&#xe3;y &#x111;i&#x1ec1;n c&#xe1;c th&#xf4;ng tin"/>
-          </AccessibilityProperties>
-          <Constraints>
-            <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="110" y="100" width="120" height="-1"/>
-            </Constraint>
-          </Constraints>
-        </Component>
         <Component class="javax.swing.JTextField" name="jTextField4">
           <Properties>
             <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
@@ -129,7 +110,7 @@
           </Properties>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="110" y="180" width="210" height="40"/>
+              <AbsoluteConstraints x="110" y="160" width="210" height="40"/>
             </Constraint>
           </Constraints>
         </Component>
@@ -142,7 +123,7 @@
           </Properties>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="110" y="240" width="-1" height="-1"/>
+              <AbsoluteConstraints x="110" y="220" width="-1" height="-1"/>
             </Constraint>
           </Constraints>
         </Component>
@@ -155,7 +136,7 @@
           </Properties>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="360" y="180" width="210" height="40"/>
+              <AbsoluteConstraints x="360" y="160" width="210" height="40"/>
             </Constraint>
           </Constraints>
         </Component>
@@ -168,7 +149,7 @@
           </Properties>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="360" y="150" width="-1" height="-1"/>
+              <AbsoluteConstraints x="360" y="130" width="-1" height="-1"/>
             </Constraint>
           </Constraints>
         </Component>
@@ -203,11 +184,11 @@
             <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="4c" green="95" red="37" type="rgb"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="H&#xe3;y &#x111;i&#x1ec1;n c&#xe1;c th&#xf4;ng tin"/>
+            <Property name="text" type="java.lang.String" value="H&#xe3;y &#x111;i&#x1ec1;n c&#xe1;c th&#xf4;ng tin c&#x1ee7;a b&#x1ea1;n"/>
           </Properties>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="110" y="70" width="290" height="-1"/>
+              <AbsoluteConstraints x="110" y="70" width="360" height="-1"/>
             </Constraint>
           </Constraints>
         </Component>
@@ -217,7 +198,7 @@
           </AuxValues>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="110" y="270" width="670" height="190"/>
+              <AbsoluteConstraints x="110" y="250" width="670" height="210"/>
             </Constraint>
           </Constraints>
 
@@ -240,7 +221,7 @@
           </Properties>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="110" y="150" width="-1" height="-1"/>
+              <AbsoluteConstraints x="110" y="130" width="-1" height="-1"/>
             </Constraint>
           </Constraints>
         </Component>
